Moved trigonometric functions.

--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -45,12 +45,12 @@
     <Compile Include="Expressions\AbsoluteMathExpression.cs" />
     <Compile Include="Expressions\AdditionMathExpression.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
-    <Compile Include="Expressions\ArccosMathExpression.cs" />
-    <Compile Include="Expressions\ArccotMathExpression.cs" />
-    <Compile Include="Expressions\ArccscMathExpression.cs" />
-    <Compile Include="Expressions\ArcsecMathExpression.cs" />
-    <Compile Include="Expressions\ArcsinMathExpression.cs" />
-    <Compile Include="Expressions\ArctanMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArccosMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArccotMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArccscMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArcsecMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArcsinMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\ArctanMathExpression.cs" />
     <Compile Include="Expressions\AssignMathExpression.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicArcosecantMathExpression.cs" />
@@ -60,9 +60,9 @@
     <Compile Include="Expressions\HyperbolicArcosineMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicArsineMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicCosecantMathExpression.cs" />
-    <Compile Include="Expressions\CosecantMathExpression.cs" />
-    <Compile Include="Expressions\CosineMathExpression.cs" />
-    <Compile Include="Expressions\CotangentMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\CosecantMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\CosineMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\CotangentMathExpression.cs" />
     <Compile Include="Expressions\DerivativeMathExpression.cs" />
     <Compile Include="Expressions\DivisionMathExpression.cs" />
     <Compile Include="Expressions\ExpMathExpression.cs" />
@@ -80,12 +80,12 @@
     <Compile Include="Expressions\MultiplicationMathExpression.cs" />
     <Compile Include="Expressions\NumberMathExpression.cs" />
     <Compile Include="Expressions\RootMathExpression.cs" />
-    <Compile Include="Expressions\SecantMathExpression.cs" />
-    <Compile Include="Expressions\SineMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\SecantMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\SineMathExpression.cs" />
     <Compile Include="Expressions\SqrtMathExpression.cs" />
     <Compile Include="Expressions\SubtractionMathExpression.cs" />
-    <Compile Include="Expressions\TangentMathExpression.cs" />
-    <Compile Include="Expressions\TrigonometryMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\TangentMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
     <Compile Include="Expressions\UnaryMathExpression.cs" />
     <Compile Include="Expressions\UnaryMinusMathExpression.cs" />
     <Compile Include="Expressions\VariableMathExpression.cs" />
