--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -66,10 +66,10 @@
     <Compile Include="Expressions\Logics\XOrLogicExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AbsoluteMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AdditionMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArccosMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArcsinMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArctanMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArccotMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArccosMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArcsinMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArctanMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArccotMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicArcosecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicArsecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicArcotangentMathExpressionTest.cs" />
@@ -81,10 +81,10 @@
     <Compile Include="Expressions\Maths\HyperbolicCotangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicTangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicCosineMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\CotangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\TangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\SineMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\CosineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\CotangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\TangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\SineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\CosineMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\DivisionMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ExpMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ExponentiationMathExpressionTest.cs" />
@@ -96,10 +96,10 @@
     <Compile Include="Expressions\Maths\SqrtMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\SubtractionMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AssignMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\SecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\CosecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArcsecMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\ArccscMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\SecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\CosecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArcsecMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Trigonometric\ArccscMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\HyperbolicSineMathExpressionTest.cs" />
     <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
