Moved hyperbolic functions.

--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -53,13 +53,13 @@
     <Compile Include="Expressions\Trigonometric\ArctanMathExpression.cs" />
     <Compile Include="Expressions\AssignMathExpression.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArcosecantMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArsecantMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArcotangentMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArtangentMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArcosineMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicArsineMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicCosecantMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArcosecantMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArsecantMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArcotangentMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArtangentMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArcosineMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicArsineMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicCosecantMathExpression.cs" />
     <Compile Include="Expressions\Trigonometric\CosecantMathExpression.cs" />
     <Compile Include="Expressions\Trigonometric\CosineMathExpression.cs" />
     <Compile Include="Expressions\Trigonometric\CotangentMathExpression.cs" />
@@ -67,11 +67,11 @@
     <Compile Include="Expressions\DivisionMathExpression.cs" />
     <Compile Include="Expressions\ExpMathExpression.cs" />
     <Compile Include="Expressions\ExponentiationMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicCosineMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicCotangentMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicSecantMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicSineMathExpression.cs" />
-    <Compile Include="Expressions\HyperbolicTangentMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicCosineMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicCotangentMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicSecantMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicSineMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicTangentMathExpression.cs" />
     <Compile Include="Expressions\IMathExpression.cs" />
     <Compile Include="Expressions\LgMathExpression.cs" />
     <Compile Include="Expressions\LnMathExpression.cs" />
