--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -70,17 +70,17 @@
     <Compile Include="Expressions\Maths\Trigonometric\ArcsinMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArctanMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccotMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArcosecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArsecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArcotangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArtangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArcosineMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicArsineMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicCosecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicSecantMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicCotangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicTangentMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicCosineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArcosecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArsecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArcotangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArtangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArcosineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicArsineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicCosecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicSecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicCotangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicTangentMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicCosineMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\CotangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\TangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\SineMathExpressionTest.cs" />
@@ -100,7 +100,7 @@
     <Compile Include="Expressions\Maths\Trigonometric\CosecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArcsecMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccscMathExpressionTest.cs" />
-    <Compile Include="Expressions\Maths\HyperbolicSineMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicSineMathExpressionTest.cs" />
     <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
