--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -103,11 +103,11 @@
     <Compile Include="Expressions\Maths\Trigonometric\ArcsecMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccscMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicSineMathExpressionTest.cs" />
-    <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
     <Compile Include="LogicParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MathLexerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics.csproj">
