--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Expressions\Logics\XOrLogicExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AbsoluteMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AdditionMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Bitwise\XOrMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\Bitwise\OrMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\NotMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\AndMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccosMathExpressionTest.cs" />
