Added tests for the LogicLexer class.

--- a/xFunc.Logics/xFunc.Logics.csproj
+++ b/xFunc.Logics/xFunc.Logics.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Expressions\UnaryLogicExpression.cs" />
     <Compile Include="Expressions\VariableLogicExpression.cs" />
     <Compile Include="Expressions\XOrLogicExpression.cs" />
+    <Compile Include="ILexer.cs" />
     <Compile Include="LogicLexer.cs" />
     <Compile Include="LogicParser.cs" />
     <Compile Include="LogicToken.cs" />
