--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -110,6 +110,7 @@
     <Compile Include="LogicParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathLexerTest.cs" />
+    <Compile Include="LogicLexerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics.csproj">
