--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -104,6 +104,11 @@
     <Compile Include="Presenters\LogicTabPresenter.cs" />
     <Compile Include="Presenters\MathTabPresenter.cs" />
     <Compile Include="Presenters\TruthTableTabPresenter.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Resource.uk.Designer.cs">
       <DependentUpon>Resource.uk.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -184,8 +189,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="LICENSE">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
