--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -22,6 +22,39 @@
             <setting name="WindowState" serializeAs="String">
                 <value>Normal</value>
             </setting>
+            <setting name="NumbersExpanded" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="StandartMathExpanded" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="StandartLogicExpanded" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="TrigonometricExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HyperbolicExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BitwiseExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ConstantsMathExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AdditionalExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ConstantsLogicExpanded" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SelectedTabIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="AngleMeasurement" serializeAs="String">
+                <value>Degree</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
