--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -55,6 +55,9 @@
             <setting name="AngleMeasurement" serializeAs="String">
                 <value>Degree</value>
             </setting>
+            <setting name="MaxCountOfExpressions" serializeAs="String">
+                <value>20</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
