Changed names of logic classes.

--- a/xFunc.Logics/xFunc.Logics.csproj
+++ b/xFunc.Logics/xFunc.Logics.csproj
@@ -42,22 +42,22 @@
   <ItemGroup>
     <Compile Include="Exceptions\LogicLexerException.cs" />
     <Compile Include="Exceptions\LogicParserException.cs" />
-    <Compile Include="Expressions\AndLogicExpression.cs" />
-    <Compile Include="Expressions\AssignLogicExpression.cs" />
+    <Compile Include="Expressions\And.cs" />
+    <Compile Include="Expressions\Assign.cs" />
     <Compile Include="Expressions\BinaryLogicExpression.cs" />
-    <Compile Include="Expressions\ConstLogicExpression.cs" />
-    <Compile Include="Expressions\EqualityLogicExpression.cs" />
+    <Compile Include="Expressions\Const.cs" />
+    <Compile Include="Expressions\Equality.cs" />
     <Compile Include="Expressions\ILogicExpression.cs" />
-    <Compile Include="Expressions\ImplicationLogicExpression.cs" />
+    <Compile Include="Expressions\Implication.cs" />
     <Compile Include="Expressions\LogicParameterCollection.cs" />
-    <Compile Include="Expressions\NAndLogicExpression.cs" />
-    <Compile Include="Expressions\NOrLogicExpression.cs" />
-    <Compile Include="Expressions\NotLogicExpression.cs" />
-    <Compile Include="Expressions\OrLogicExpression.cs" />
-    <Compile Include="Expressions\TruthTableExpression.cs" />
+    <Compile Include="Expressions\NAnd.cs" />
+    <Compile Include="Expressions\NOr.cs" />
+    <Compile Include="Expressions\Not.cs" />
+    <Compile Include="Expressions\Or.cs" />
+    <Compile Include="Expressions\TruthTable.cs" />
     <Compile Include="Expressions\UnaryLogicExpression.cs" />
-    <Compile Include="Expressions\VariableLogicExpression.cs" />
-    <Compile Include="Expressions\XOrLogicExpression.cs" />
+    <Compile Include="Expressions\Variable.cs" />
+    <Compile Include="Expressions\XOr.cs" />
     <Compile Include="ILexer.cs" />
     <Compile Include="LogicLexer.cs" />
     <Compile Include="LogicParser.cs" />
