--- a/xFunc.Logics/xFunc.Logics.csproj
+++ b/xFunc.Logics/xFunc.Logics.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Expressions\UnaryLogicExpression.cs" />
     <Compile Include="Expressions\Variable.cs" />
     <Compile Include="Expressions\XOr.cs" />
-    <Compile Include="ILexer.cs" />
+    <Compile Include="IMathLexer.cs" />
     <Compile Include="LogicLexer.cs" />
     <Compile Include="LogicParser.cs" />
     <Compile Include="LogicToken.cs" />
