--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -58,6 +58,9 @@
             <setting name="MaxCountOfExpressions" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="Lang" serializeAs="String">
+                <value>Auto</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
