#21 Adding XML Documentation.

--- a/xFunc.Logics/xFunc.Logics.csproj
+++ b/xFunc.Logics/xFunc.Logics.csproj
@@ -29,6 +29,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\xFunc.Logics.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
