--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -64,25 +64,25 @@
     <Compile Include="Expressions\Trigonometric\Arctan.cs" />
     <Compile Include="Expressions\Assign.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArcosecant.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArsecant.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArcotangent.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArtangent.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArcosine.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicArsine.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicCosecant.cs" />
-    <Compile Include="Expressions\Trigonometric\Cosecant.cs" />
-    <Compile Include="Expressions\Trigonometric\Cosine.cs" />
-    <Compile Include="Expressions\Trigonometric\Cotangent.cs" />
+    <Compile Include="Expressions\Hyperbolic\Arcsch.cs" />
+    <Compile Include="Expressions\Hyperbolic\Arsech.cs" />
+    <Compile Include="Expressions\Hyperbolic\Arcoth.cs" />
+    <Compile Include="Expressions\Hyperbolic\Artanh.cs" />
+    <Compile Include="Expressions\Hyperbolic\Arcosh.cs" />
+    <Compile Include="Expressions\Hyperbolic\Arsinh.cs" />
+    <Compile Include="Expressions\Hyperbolic\Csch.cs" />
+    <Compile Include="Expressions\Trigonometric\Csc.cs" />
+    <Compile Include="Expressions\Trigonometric\Cos.cs" />
+    <Compile Include="Expressions\Trigonometric\Cot.cs" />
     <Compile Include="Expressions\Derivative.cs" />
     <Compile Include="Expressions\Division.cs" />
     <Compile Include="Expressions\Exponential.cs" />
     <Compile Include="Expressions\Exponentiation.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicCosine.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicCotangent.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicSecant.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicSine.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicTangent.cs" />
+    <Compile Include="Expressions\Hyperbolic\Cosh.cs" />
+    <Compile Include="Expressions\Hyperbolic\Coth.cs" />
+    <Compile Include="Expressions\Hyperbolic\Sech.cs" />
+    <Compile Include="Expressions\Hyperbolic\Sinh.cs" />
+    <Compile Include="Expressions\Hyperbolic\Tanh.cs" />
     <Compile Include="Expressions\IMathExpression.cs" />
     <Compile Include="Expressions\Lg.cs" />
     <Compile Include="Expressions\Ln.cs" />
@@ -91,11 +91,11 @@
     <Compile Include="Expressions\Multiplication.cs" />
     <Compile Include="Expressions\Number.cs" />
     <Compile Include="Expressions\Root.cs" />
-    <Compile Include="Expressions\Trigonometric\Secant.cs" />
-    <Compile Include="Expressions\Trigonometric\Sine.cs" />
+    <Compile Include="Expressions\Trigonometric\Sec.cs" />
+    <Compile Include="Expressions\Trigonometric\Sin.cs" />
     <Compile Include="Expressions\Sqrt.cs" />
     <Compile Include="Expressions\Subtraction.cs" />
-    <Compile Include="Expressions\Trigonometric\Tangent.cs" />
+    <Compile Include="Expressions\Trigonometric\Tan.cs" />
     <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
     <Compile Include="Expressions\UnaryMathExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
