--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -49,8 +49,8 @@
   <ItemGroup>
     <Compile Include="Exceptions\MathLexerException.cs" />
     <Compile Include="Exceptions\MathParserException.cs" />
-    <Compile Include="Expressions\Absolute.cs" />
-    <Compile Include="Expressions\Addition.cs" />
+    <Compile Include="Expressions\Abs.cs" />
+    <Compile Include="Expressions\Add.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
     <Compile Include="Expressions\Bitwise\And.cs" />
     <Compile Include="Expressions\Bitwise\XOr.cs" />
@@ -75,9 +75,9 @@
     <Compile Include="Expressions\Trigonometric\Cos.cs" />
     <Compile Include="Expressions\Trigonometric\Cot.cs" />
     <Compile Include="Expressions\Derivative.cs" />
-    <Compile Include="Expressions\Division.cs" />
-    <Compile Include="Expressions\Exponential.cs" />
-    <Compile Include="Expressions\Exponentiation.cs" />
+    <Compile Include="Expressions\Div.cs" />
+    <Compile Include="Expressions\Exp.cs" />
+    <Compile Include="Expressions\Pow.cs" />
     <Compile Include="Expressions\Hyperbolic\Cosh.cs" />
     <Compile Include="Expressions\Hyperbolic\Coth.cs" />
     <Compile Include="Expressions\Hyperbolic\Sech.cs" />
@@ -88,13 +88,13 @@
     <Compile Include="Expressions\Ln.cs" />
     <Compile Include="Expressions\Log.cs" />
     <Compile Include="Expressions\MathParameterCollection.cs" />
-    <Compile Include="Expressions\Multiplication.cs" />
+    <Compile Include="Expressions\Mul.cs" />
     <Compile Include="Expressions\Number.cs" />
     <Compile Include="Expressions\Root.cs" />
     <Compile Include="Expressions\Trigonometric\Sec.cs" />
     <Compile Include="Expressions\Trigonometric\Sin.cs" />
     <Compile Include="Expressions\Sqrt.cs" />
-    <Compile Include="Expressions\Subtraction.cs" />
+    <Compile Include="Expressions\Sub.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
     <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
     <Compile Include="Expressions\UnaryMathExpression.cs" />
