--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -123,10 +123,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Tokens\Functions.cs" />
     <Compile Include="Tokens\FunctionToken.cs" />
     <Compile Include="Tokens\IToken.cs" />
     <Compile Include="Tokens\NumberToken.cs" />
+    <Compile Include="Tokens\Operations.cs" />
     <Compile Include="Tokens\OperationToken.cs" />
+    <Compile Include="Tokens\SymbolToken.cs" />
     <Compile Include="Tokens\UserFunctionToken.cs" />
     <Compile Include="Tokens\VariableToken.cs" />
   </ItemGroup>
